# persona

./: .env.example  .gitignore  LICENSE  README.MD  download-fonts.sh  install.sh  main.py  mypy.ini  persona.sh  persona.spec  pyproject.toml  requirements.txt  run_persona.bat
.github/scripts/: make_wizard_images.py  set_exe_icon.py
.github/workflows/: release.yml
ci/: prefetch_flet.py
examples/: drive_profile.py
src/: main.py
src/api/: app.py  cdp_endpoint.py  dependencies.py  helpers.py  mcp_config.py  mcp_server.py  mcp_token.py  server.py
src/core/: assets.py  config.py  container.py  events.py  logging.py  platform.py  settings.py  strings.py
src/interfaces/: __init__.py  protocols.py
src/models/: bookmark.py  profile.py  proxy.py
tests/: test_app_server.py  test_app_update.py  test_app_update_staged.py  test_apply_restart.py  test_assets.py  test_audio_ext.py  test_automation_api.py  test_bookmark_store.py  test_bookmarks_seed.py  test_bulk.py  test_camoufox.py  test_cdp.py  test_config_home.py  test_cookie.py  test_cookie_status.py  test_default_bookmarks.py  test_device_ext.py  test_engine_ensure.py  test_engine_logo.py  test_engine_noise.py  test_engine_progress.py  test_engine_updater.py  test_firefox_bookmarks.py  test_flag.py  test_font_config.py  test_geo_ext.py  test_gpu_ext.py  test_invisible_launch.py  test_launch_guard.py  test_locale.py  test_locale_ext.py  test_log_lines.py  test_main_cwd.py  test_mcp_config.py  test_mcp_params.py  test_mcp_token.py  test_measuretext_ext.py  test_mobile.py  test_notes.py  test_onboarding_flow.py  (+24 more)
(+98 files in other folders)
