[project]
name = "persona"
version = "1.0.0"
description = "Anti-detect browser manager"
requires-python = ">=3.13"
dependencies = [
    "flet==0.85.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "cryptography>=42.0.0",
    "mcp>=1.28.0",
]

[tool.flet]
product = "persona"
org = "dev.persona"
company = "persona"
copyright = "Copyright (c) 2026 persona contributors"
build_number = 1

[tool.flet.app]
path = "."
module = "main"
exclude = [
    "build",
    "dist",
    ".git",
    ".github",
    "tests",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "persona_data",
    "logs",
    "ci",
]
